--- a/ecommerce/store/templates/store/checkout.html
+++ b/ecommerce/store/templates/store/checkout.html
@@ -31,7 +31,7 @@
 						<input class="form-control" type="text" name="zipcode" placeholder="Zip code..">
 					</div>
 					<div class="form-field">
-						<input class="form-control" type="text" name="country" placeholder="Zip code..">
+						<input class="form-control" type="text" name="country" placeholder="Country..">
 					</div>
 				</div>
 
